[gd_scene load_steps=9 format=3 uid="uid://d0a5ysargvfyt"]

[ext_resource type="Script" path="res://entity_showcase/location_manager.gd" id="1_w0cw4"]
[ext_resource type="Script" uid="uid://cpjr3tiowtf1u" path="res://addons/cts_items/Core/inventory_manager.gd" id="2_4va0p"]
[ext_resource type="Script" path="res://entity_showcase/inventory_hud.gd" id="3_qvhuq"]
[ext_resource type="PackedScene" path="res://addons/cts_ui/PlayerBook/PlayerBook.tscn" id="4_iw511"]
[ext_resource type="PackedScene" path="res://addons/cts_ui/PlayerBook/pages/SkillsPage.tscn" id="5_offfl"]
[ext_resource type="Resource" path="res://addons/cts_ui/PlayerBook/examples/test_stats_config.tres" id="6_21kgr"]
[ext_resource type="PackedScene" path="res://addons/cts_ui/PlayerBook/pages/AffixPage.tscn" id="7_tb61r"]
[ext_resource type="PackedScene" path="res://addons/cts_ui/PlayerBook/pages/InventoryPage.tscn" id="8_3l2r8"]

[node name="Location" type="Node2D"]
script = ExtResource("1_w0cw4")

[node name="Background" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.101961, 0.101961, 0.101961, 1)

[node name="SpawnPoint" type="Marker2D" parent="."]
position = Vector2(99, 386)

[node name="EventBus" type="Node" parent="."]

[node name="Entity" type="Node2D" parent="."]

[node name="Inventory" type="Node" parent="Entity"]
script = ExtResource("2_4va0p")

[node name="Stats" type="Node" parent="Entity"]

[node name="AffixContainer" type="Node" parent="Entity"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("3_qvhuq")

[node name="VBox" type="VBoxContainer" parent="UI/HUD"]
layout_mode = 0

[node name="Label" type="Label" parent="UI/HUD/VBox"]
layout_mode = 2

[node name="PlayerBook" parent="UI" instance=ExtResource("4_iw511")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.0
offset_top = -200.0
offset_right = 300.0
offset_bottom = 200.0
current_tab = 0

[node name="SkillsPage" parent="UI/PlayerBook" instance=ExtResource("5_offfl")]
layout_mode = 2
config = ExtResource("6_21kgr")
metadata/_tab_index = 0

[node name="AffixPage" parent="UI/PlayerBook" instance=ExtResource("7_tb61r")]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="InventoryPage" parent="UI/PlayerBook" instance=ExtResource("8_3l2r8")]
visible = false
layout_mode = 2
metadata/_tab_index = 2

[editable path="UI/PlayerBook"]
